tried to patch the cms

--- a/admin/index.html
+++ b/admin/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="https://unpkg.com/netlify-cms@^0.7.3/dist/cms.js"></script>
+  <script src="cms.js"></script>
 </body>
 </html>
